--- a/style.css
+++ b/style.css
@@ -1,227 +1,242 @@
-body{
-	margin: 0;
-	padding: 0;
+*,
+html,
+body {
+    margin: 0;
+    box-sizing: border-box;
+    transition: all 0.3s;
 }
 
 /*spacing*/
-.container{
-	width:1200px;
-	margin: auto;
+.container {
+    max-width: 1200px;
+    width: 100%;
+    padding: 0 16px;
+    margin: auto;
 }
 
-.row{
-	padding: 25px 0px;
+.row {
+    padding: 25px 0px;
 }
 
 /*typography*/
-h1,h2,h3,h4,p,a, li{
-	font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+p,
+a,
+li {
+    font-family: 'Poppins', sans-serif;
 }
 
-h1,h2,h3{
-	font-weight: 600;
+h1,
+h2,
+h3 {
+    font-weight: 600;
 }
 
-h4,a{
-	font-weight: 400;
+h1, h2 {
+    margin-bottom: 16px;
 }
 
-p, li{
-	font-weight: 300;
+h4,
+a {
+    font-weight: 400;
+}
+
+p,
+li {
+    font-weight: 300;
 }
 
 /*buttons*/
-a.button1, a.button2{
-	display:inline-block;
-	padding:0.35em 1.2em;
-	border-radius:1.2em;
-	box-sizing: border-box;
-	text-decoration:none;
-	text-align:center;
-	transition: all 0.2s;
-	margin: 20px 0px;
+a.button1,
+a.button2 {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border-radius: 1.2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    text-align: center;
+    transition: all 0.2s;
+    margin: 20px 0px;
 }
 
-a.button1{
-	border:0.15em solid #000032;
-	color:#000032;
+a.button1 {
+    border: 0.15em solid #000032;
+    color: #000032;
 }
 
-a.button1:hover{
-	color:#FFFFFF;
-	background-color:#000032;
+a.button1:hover {
+    color: #FFFFFF;
+    background-color: #000032;
 }
 
-a.button2{
-	border:0.15em solid #FFF;
-	color:#FFF;
+a.button2 {
+    border: 0.15em solid #FFF;
+    color: #FFF;
 }
 
-a.button2:hover{
-	color:#000032;
-	background-color:#FFFFFF;
+a.button2:hover {
+    color: #000032;
+    background-color: #FFFFFF;
 }
 
-.buttons{
-	display: flex;
-	justify-content: center;
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 72px;
 }
 
-.buttons a.button1{
-	margin: 20px 10px;
+.buttons a.button1 {
+    margin: 20px 10px;
 }
 
 /*navbar*/
-.nav{
-	display: flex;
-	justify-content: space-between;
+.nav {
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo {
-	width: 150px;
-	margin: 20px 0px;
-	display: flex;
-	max-width: 30%;
+    width: 150px;
+    margin: 20px 0px;
+    display: flex;
+    max-width: 30%;
 }
 
 .logo img {
-	width: 100%;
+    width: 100%;
 }
 
 /*banner*/
-.banner{
-	color: #FFF;
-	height: 50vh;
-	min-height: 150px;
-	text-align: center;
-	position: relative;
-	background-size: cover;
-	background-position: center;
+.banner {
+    color: #FFF;
+    height: 50vh;
+    min-height: 150px;
+    text-align: center;
+    position: relative;
+    background-size: cover;
+    background-position: center;
 }
 
-.page-title{
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+.page-title {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /*projects*/
+section {
+    padding-top: 72px;
+}
+
+section p {
+    margin-bottom: 16px;
+}
+
 .center {
-	text-align: center;
+    text-align: center;
 }
-.projects{
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px
 }
+
 .project {
-	width: 32%;
-	display: flex;
-	margin-bottom: 20px;
+    width: 100%;
+    aspect-ratio: 1;
+    position: relative;
 }
 
-.project:after {
-	content: "";
-	display: block;
-	padding-bottom: 100%;
+.project-bg {
+    background-size: cover;
+    background-position: center;
+    transition: all 0.5s;
+    width: 100%;
+    height: 100%;
 }
 
-.project-bg{
-	background-size: cover;
-	background-position: center;
-	transition: all 0.5s;
-  width: 100%;
-  height: 100%;
+.project-label {
+    position: absolute;
+    color: #FFF;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: #00003259;
+    padding: 5px;
 }
 
-.project-label{
-	position: absolute;
-	color: #FFF;
-	align-self: flex-end;
-	margin-left: 20px;
-	margin-bottom: 20px;
-	background-color: #00003259;
-	padding: 5px;
+.project-label h3,
+.project-label h4 {
+    margin: 0;
 }
 
-.project-label h3,.project-label h4{
-	margin:0;
+.proj-img {
+    width: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
 }
 
-.proj-img{
-	width: 100%;
-	margin: 20px 0px;
-}
-
-.project-bg:hover{
-	opacity: 0.2;
+.project:hover .project-label {
+    background-color: #000032;
 }
 
 /*about*/
-.about{
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+.grid, .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px
 }
-.box1{
-	width: 47.5%;
-}
-.box2{
-	width: 32%;
-}
-.mob-center{
-	text-align: left;
+
+.mob-center {
+    text-align: left;
 }
 
 /*footer*/
-footer{
-	background-color: #000032;
-	color: #FFF;
-	text-align: center;
+footer {
+    margin-top: 72px;
+    background-color: #000032;
+    color: #FFF;
+    text-align: center;
 }
 
-.footer{
-	display: flex;
-	justify-content: space-between;
-	padding: 20px 0px 50px 0px;
+.footer {
+    padding: 48px 0;
 }
 
-.footer-col{
-	width: 49%;
-}
-
-#copyright{
-	margin: 0;
+#copyright {
+    margin: 0;
     padding-bottom: 20px;
 }
 
 /*Responsive*/
-@media only screen and (max-width: 1205px) {
-	.container{
-		width:95%;
-		margin: auto;
-	}
+@media screen and (max-width: 600px) {
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer,
+    .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .row {
+        padding-bottom: 20px;
+    }
+
+    .mob-center {
+        text-align: center;
+    }
 }
-@media only screen and (max-width: 600px) {
-	.footer-col, .box1, .box2{
-		width: 100%;
-	}
-	.footer, .about{
-		display: block;
-	}
-	.project {
-		width: 49%;
-	}
-	.row{
-		padding-bottom: 20px;
-	}
-	.mob-center {
-		text-align: center;
-	}
-	.project-label{
-		margin-left: 5px;
-		margin-bottom: 5px;
-	}
+
+@media screen and (max-width: 400px) {
+    .projects {
+        grid-template-columns: 1fr;
+    }
 }
