Autofocus removed and BTW added

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -14,7 +14,7 @@ const currentLocale = Astro.currentLocale ?? 'en';
                 <div class="mb-5">
                     <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="First_Name">
                         {$t("First name", currentLocale)}</label>
-                    <input type="text" name="First Name" id="First_Name" autofocus="autofocus"
+                    <input type="text" name="First Name" id="First_Name"
                            class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"/>
                 </div>
                 <div class="mb-5">
