--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@ const currentLocale = Astro.currentLocale ?? 'en';
             </span>
             <div class="text-sm text-gray-500 text-center dark:text-gray-400 flex gap-1 flex-col sm:flex-row">
                 <span class="block">KvK: <strong>98605003</strong></span>
-                <span class="block">BTW: <strong>-</strong></span>
+                <span class="block">BTW: <strong>NL005342447B77</strong></span>
             </div>
         </div>
     </div>
