--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -47,7 +47,7 @@ const nlUrl = getAbsoluteLocaleUrl('nl', currentPath);
     <meta property="og:description"
           content={pageDescription}>
     <meta property="og:url" content="https://w3bl.com/">
-    <meta property="og:image" content=/og.png">
+    <meta property="og:image" content="https://w3bl.com/og.png">
     <meta property="og:site_name" content="Thorsten Bell | Freelance Web Developer & Graphic Designer">
 
     {currentLocale === 'en' && <script type="application/ld+json">
