HTML fixes after using HTML checker

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -45,7 +45,7 @@ const currentLocale = Astro.currentLocale ?? 'en';
                           class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light"></textarea>
             </div>
             <div style="opacity:0;position:absolute;top:0;left:-5000px;height:0;width:0">
-                <label for="subscribe_41adcee5ca3b_49467"></label>
+                <label for="email_subscribe_41adcee5ca3b_49467">Subscribe</label>
                 <input name="subscribe_41adcee5ca3b_49467" value="" tabindex="-1" autocomplete="off"
                        type="email" id="email_subscribe_41adcee5ca3b_49467" placeholder="Your email here">
             </div>
