--- a/src/components/Home/About.astro
+++ b/src/components/Home/About.astro
@@ -16,7 +16,7 @@ import {$t} from '../../utils/i18n';
                     <EnContent/>}
         </div>
         <div class="flex sm:col-span-2 justify-center sm:justify-start">
-            <Picture class="mx-auto max-w-xs w-full h-auto aspect-square object-cover object-center rounded-lg" src={ThorstenBell} formats={['avif', 'webp']} alt="Thorsten Bell"/>
+            <Picture class="mx-auto max-w-xs w-full h-auto aspect-square object-cover object-center rounded-lg" src={ThorstenBell} formats={['avif', 'webp']} alt="Portrait photo of Thorsten Bell"/>
         </div>
     </div>
 </section>
