Image change and npm update

--- a/src/components/Home/Cases.astro
+++ b/src/components/Home/Cases.astro
@@ -1,11 +1,11 @@
 ---
 import { Picture } from 'astro:assets';
 import Heco1 from '../../assets/images/heco/heco1.jpg'
+import Heco6 from '../../assets/images/heco/heco6.png'
 import Walas4 from '../../assets/images/walas/walas4.jpg'
 import Rds3 from '../../assets/images/rds/rds3.jpg'
 import Rds4 from '../../assets/images/rds/rds4.jpg'
 import Rds5 from '../../assets/images/rds/rds5.jpg'
-import Rgn4 from '../../assets/images/rgn/rgn4.jpg'
 ---
 
 <section class="bg-white dark:bg-gray-900">
@@ -15,10 +15,10 @@ import Rgn4 from '../../assets/images/rgn/rgn4.jpg'
                 <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Heco1} formats={['avif', 'webp']} alt="" />
             </div>
             <div>
-                <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Rgn4} formats={['avif', 'webp']} alt="" />
+                <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Walas4} formats={['avif', 'webp']} alt="" />
             </div>
             <div>
-                <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Walas4} formats={['avif', 'webp']} alt="" />
+                <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Heco6} formats={['avif', 'webp']} alt="" />
             </div>
             <div>
                 <Picture class="h-auto aspect-[4/3] object-cover w-full rounded-lg" src={Rds3} formats={['avif', 'webp']} alt="" />
